<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainnnLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_list"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_margin="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title TextView -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="REMINDERS"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Title TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Message TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/messageET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Date and Time Pickers -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:layout_gravity="center"
                    android:scaleY="0.7"
                    android:scaleX="0.7"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginRight="-30dp" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:layout_gravity="center"
                    android:scaleY="0.7"
                    android:scaleX="0.7"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginRight="-30dp" />
            </LinearLayout>

            <!-- Submit Button -->
            <Button
                android:id="@+id/submitButton"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/schedule_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
